# terminalC

./: .gitignore  README.md  pyproject.toml  requirements.txt  terminalc.ipynb
.github/workflows/: README.md  coindesk_scraper.yml
logs/: eval_after.txt  eval_before.txt  small-lm-train-14634.err  small-lm-train-14634.out  small-lm-train-16043.err  small-lm-train-16043.out  small-train-14543.err  small-train-14543.out
notebooks/: 1.0-data_analysis.ipynb  2.0-pipeline_test.ipynb  3.0-final_pipeline.ipynb  4.0-chatbox.ipynb  4.0-testing_performance.ipynb
report/: 018219422-CMPE 259 Project Proposal.md  abstract.md  final_report_draft.md  project_requriements.md
report/final_report/: final_report.aux  final_report.fdb_latexmk  final_report.fls  final_report.out  final_report.tex
results/: large_llm_result.csv  small_base_llm_result.csv  small_lora_llm_result.csv  training_loss.csv
results/cache_test_result/: large_cache_results.csv  small_cache_results.csv  small_lora_cache_results.csv
src/: main.py
src/data_process/: data_fetcher.py  data_preprocess.py  main.py
src/data_scripts/: README.md  main.py
src/data_scripts/core/: data_fetcher.py  technical_indicators.py
src/data_scripts/database/: injest_to_duckdb.py
src/data_scripts/strategy/: __init__.py  (+1 more)
src/database/: injest_to_duckdb.py
src/runtime_core/: config.py
terminalc/data_scripts/: main.py
terminalc/runtime_core/: README.md  config.py
terminalc/training/: evaluate_model.py  generate_dataset.py  train_small_model.py  train_small_model.sbatch  training_data.jsonl
terminalc/utils/: timing_utils.py
(+44 files in other folders)
