[project]
name = "terminalc"
version = "0.1.0"
description = ""
authors = [
    {name = "shawn.kim",email = "dun03191@gmail.com"}
]
readme = "README.md"
requires-python = "=3.10.5"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "yfinance (>=0.2.49,<0.3.0)",
    "ccxt (>=4.4.32,<5.0.0)",
    "ta-lib (>=0.5.1,<0.6.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "scipy (>=1.14.1,<2.0.0)",
    "matplotlib (>=3.9.2,<4.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "scikit-learn (>=1.5.2,<2.0.0)",
    "xgboost (>=2.1.3,<3.0.0)",
    "pandas-datareader (>=0.10.0,<0.11.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "lightgbm (>=4.5.0,<5.0.0)",
    "arch (>=7.2.0,<8.0.0)",
    "missingno (>=0.5.2,<0.6.0)",
    "mplfinance (>=0.12.10b0,<0.13.0)",
    "finplot (>=1.9.7,<2.0.0)",
    "torch (>=2.5.1,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "gspread (>=5.0.0,<6.0.0)",
    "gspread-pandas (>=3.3.0,<4.0.0)",
    "oauth2client (>=4.1.3,<5.0.0)",
    "pyqt6 (>=6.9.1,<7.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "duckdb (>=1.4.0,<2.0.0)",
    "beautifulsoup4 (>=4.14.2,<5.0.0)",
    "selenium (>=4.38.0,<5.0.0)",
    "huggingface-hub (>=0.25.2,<0.26.0)",
    "transformers (>=4.46.2,<5.0.0)",
    "trl (>=0.9)",
    "sentencepiece (>=0.2.1,<0.3.0)",
    "tiktoken (>=0.12.0,<0.13.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
